# ublue-ansible

./: .envrc  .gitignore  .pre-commit-config.yaml  Justfile  ansible.cfg  playbook.yml  pyproject.toml  test_gg.yml
roles/system_config/files/: 99-podman-homelab.conf
roles/system_config/tasks/: main.yml
roles/user_config/files/: gitconfig.ini  user-dirs.dirs
roles/user_config/files/fish/: fish_plugins
roles/user_config/files/nvim/lua/config/: editor.lua  init.lua
roles/user_config/files/nvim/lua/plugins/: catppuccin.lua  indent-blankline.lua  lualine.lua  mason.lua  noice.lua  nvim-autopairs.lua  nvim-lspconfig.lua  nvim-tree.lua  nvim-treesitter.lua  telescope.lua  which-key.lua
roles/user_config/files/rfcv/: rfcv
roles/user_config/files/tmux/: keybind.conf  misc.conf  theme.conf  tmux.conf
roles/user_config/files/tmux/themes/3024_night/: 3024_night.tmux
roles/user_config/tasks/: eza.yml  fish.yml  k3s.yml  main.yml  nerd_fonts.yml  nvim.yml  rfcv.yml  ssh_keys.yml  starship.yml  tmux.yml
roles/user_config/templates/fish/: config.fish.j2
roles/user_config/templates/nvim/: init.lua.j2
roles/user_config/templates/starship/: starship.toml.j2
roles/user_config/templates/tmux/: tmux.conf.j2
roles/user_homelab/files/: adguardhome-conf.volume  adguardhome.container
roles/user_homelab/tasks/: main.yml  prepare_system.yml  service_adguardhome.yml
roles/user_theming/tasks/: install_nerd_fonts.yml  main.yml  setup_ssh_keys.yml  setup_theme_dirs.yml
